app/assets/scss/main.scss
@use 'fonts';
@use 'var' as *;

html {
  box-sizing: border-box;
}

body {
  min-width: 320px;
  font-family: $secondary-font-family, sans-serif;
  font-weight: 400;
  background-color: $white-color;
}

*,
*::before,
*::after {
  box-sizing: inherit;
  margin: 0;
}

a {
  color: inherit;
  text-decoration: none;
}

img {
  max-width: 100%;
}

ul {
  padding: 0;
  margin: 0;
  list-style: none;
}

button {
  padding: 0;
  cursor: pointer;
  background-color: transparent;
  border: none;
}

p,
h1,
h2,
h3,
figure,
figcaption {
  padding: 0;
  margin: 0;
}

.wrapper {
  width: 100vw;
}

.container {
  min-width: 346px;
  padding: 0 16px;
  margin: 0 auto;

  @media (min-width: $breakpoint-m) {
    min-width: 696px;
    padding: 0 36px;
  }
  @media (min-width: $breakpoint-l) {
    min-width: 936px;
    padding: 0 36px;
  }
  @media (min-width: $breakpoint-xl) {
    min-width: 1216px;
    padding: 0 112px;
  }
  @media (min-width: $breakpoint-xxl) {
    min-width: 1680px;
    padding: 0 120px;
  }
}

